added contact description

--- a/Contact-Dynamics/Geometry of the thermodynamical phase space.ipynb
+++ b/Contact-Dynamics/Geometry of the thermodynamical phase space.ipynb
@@ -101,7 +101,7 @@
     "\t\\Psi(\\theta,t) := \\Bigg( \\frac{1}{J_0} \\sum_{j \\in \\Gamma} \\frac{\\rho(j,t;\\theta)}{\\rho_\\theta^{eq}(j)} \\Bigg) \\Psi_{eq}(\\theta), \\hspace{0.3 cm} \\text{with} \\hspace{0.3 cm} J_0 := \\sum_{j' \\in \\Gamma} 1.\n",
     "\\end{equation*}\n",
     "\n",
-    "Finally, using the master equation and the definitions for the expected values it can be found that the dynamics that follow the conjugate thermodynamical quantities $\\theta_a$ y $\\langle \\mathcal{O}_a \\rangle$ and the function $\\Psi$ asocieted to $\\rho(j,t;\\theta)$ is given by the following set of equations\n",
+    "Finally, using the master equation and the definitions for the expected values it can be found that the dynamics that follow the conjugate thermodynamical quantities $\\theta_a$ y $\\langle \\mathcal{O}_a \\rangle$ and the function $\\Psi$ asociated to $\\rho(j,t;\\theta)$ is given by the following set of equations\n",
     "\n",
     "\\begin{equation}\n",
     "\t\\frac{d}{dt} \\theta^a = 0, \\hspace{0.3 cm} \\frac{d}{dt} \\langle \\mathcal{O}_a \\rangle_\\theta = - \\langle \\mathcal{O}_a \\rangle_\\theta + \\frac{\\partial \\Psi_{eq}}{\\partial \\theta^a}, \\hspace{0.3cm} \\frac{d}{dt} \\Psi = -\\Psi + \\Psi_{eq}\n",
