Update Geometry of the thermodynamical phase space.ipynb

--- a/Contact-Dynamics/Geometry of the thermodynamical phase space.ipynb
+++ b/Contact-Dynamics/Geometry of the thermodynamical phase space.ipynb
@@ -37,21 +37,21 @@
     "\n",
     "Be $\\Gamma$ a finite set of discrete states, $t \\in \\mathbb{R}$ time, and $\\rho(j,t)dt$ the probability of having the state $j \\in \\Gamma$  between a time $t$ and $t + dt$ with $\\rho: \\Gamma \\times \\mathbb{R} \\rightarrow \\mathbb{R}_{\\geq 0}$ a time dependent probability distribution. Let be  $\\rho_\\theta^{eq}(j)$ a distribution that can be written in the form\n",
     "\n",
-    "\\begin{equation*}\n",
+    "\\begin{equation}\n",
     "\t\\rho_\\theta^{eq}(j) = \\frac{\\pi_\\theta(j)}{\\mathcal{Z(\\theta)}},\n",
-    "\\end{equation*}\n",
+    "\\end{equation}\n",
     "\n",
     "where $\\theta \\in \\Theta \\subset \\mathbb{R}^n$ is a parameter set, and $\\mathcal{Z}: \\Theta \\rightarrow \\mathbb{R}$ is the so called partition function defined such that  $\\rho_\\theta^{eq}$ be normalized\n",
     "\n",
-    "\\begin{equation*}\n",
+    "\\begin{equation}\n",
     "\t\\mathcal{Z}(\\theta) = \\sum_{j\\in \\Gamma} \\pi_\\theta(j).\n",
-    "\\end{equation*}\n",
+    "\\end{equation}\n",
     "\n",
     "Consider the set of master equations with Markovian kernel\n",
     "\n",
-    "\\begin{equation*}\n",
+    "\\begin{equation}\n",
     "\t\\frac{\\partial }{\\partial t} \\rho(j,t) = \\sum_{j' (\\neq j)} [w(j|j') \\rho(j',t)  -  w(j'|j)\\rho(j,t)],\n",
-    "\\end{equation*}\n",
+    "\\end{equation}\n",
     "\n",
     "where $w(j|j')$ denotes the probability of jumping from a state $j$ to $j'$. Choosing $w_\\theta(j|j') = p_\\theta^{eq}$ with $p_\\theta^{eq}(j) \\neq 0$ for all $j \\in \\Gamma$ we arrive to\n",
     "\n",
@@ -61,45 +61,45 @@
     "\n",
     "The solution to this equation is given  by\n",
     "\n",
-    "\\begin{equation*}\n",
+    "\\begin{equation}\n",
     "\t\\rho(j,t) = e^{-t}\\rho(j,0) + (1 - e^{-t})\\rho_\\theta^{eq}(j),\n",
-    "\\end{equation*}\n",
+    "\\end{equation}\n",
     "\n",
     "expression that allows us to conclude immediately \n",
     "\n",
-    "\\begin{equation*}\n",
+    "\\begin{equation}\n",
     "\t\\lim_{t \\to \\infty} \\rho(j,t) = \\rho_\\theta^{eq}.\n",
-    "\\end{equation*}\n",
+    "\\end{equation}\n",
     "\n",
     "Let $\\rho_\\theta^{eq}$ denote a family of distributions such that $\\pi_\\theta(j) = \\text{exp}(\\theta^a \\mathcal{O}_a(j))$ with $\\{\\mathcal{O_a}\\}$ some function set. This family parametrized by $\\theta = \\{\\theta^1,...,\\theta^n\\} \\in \\Theta \\subset \\mathbb{R}^n$ can be written in the following form\n",
     "\n",
-    "\\begin{equation*}\n",
+    "\\begin{equation}\n",
     "\t\\rho_\\theta^{eq}(j) = \\text{exp}(\\theta^a \\mathcal{O}_a - \\Psi_{eq}(\\theta)),\n",
-    "\\end{equation*}\n",
+    "\\end{equation}\n",
     "\n",
     "where $\\Psi(\\theta)$ is such that $\t\\rho_\\theta^{eq}(j)$ is normalized\n",
     "\n",
-    "\\begin{equation*}\n",
+    "\\begin{equation}\n",
     "\t\\Psi_{eq}(\\theta) := ln\\Bigg( \\sum_{j \\in \\Gamma} e^{\\theta^a \\mathcal{O}_a(j)} \\Bigg).\n",
-    "\\end{equation*}\n",
+    "\\end{equation}\n",
     "\n",
     "Through a function $\\Psi(\\theta)$ defined for some distribution of this family that not necessarily describes the thermodynamical equilibrium of some system is possible to define the notion of conjugate thermodynamical variables. The quantities $\\theta^a$ and $\\langle \\mathcal{O}_a \\rangle$ are said to define that pair in the following sense\n",
     "\n",
-    "\\begin{equation*}\n",
+    "\\begin{equation}\n",
     "\t\\eta_a := \\langle \\mathcal{O}_a \\rangle = \\frac{\\partial \\Psi}{\\partial \\theta^a}, \\hspace{0.8 cm} a \\in \\{1,...,n\\}.\n",
-    "\\end{equation*}\n",
+    "\\end{equation}\n",
     "\n",
     "Now we define the expected values with respect to $\\rho(j,t;\\theta)$ and $\\rho_\\theta^{eq}(j)$ as\n",
     "\n",
-    "\\begin{equation*}\n",
+    "\\begin{equation}\n",
     "\t\\langle \\mathcal{O}_a \\rangle_\\theta (t) := \\sum_{j \\in \\Gamma} \\mathcal{O}_a (j) \\rho(j,t;\\theta) \\hspace{0.3 cm} \\text{y} \\hspace{0.3 cm} \\langle \\mathcal{O}_a \\rangle^{eq} := \\sum_{j \\in \\Gamma} \\mathcal{O}_a (j) \\rho_\\theta^{eq}(j)\n",
-    "\\end{equation*}\n",
+    "\\end{equation}\n",
     "\n",
     "respectivaly. The definition of $\\Psi$ can be extended for non equilibrium states in the following way\n",
     "\n",
-    "\\begin{equation*}\n",
+    "\\begin{equation}\n",
     "\t\\Psi(\\theta,t) := \\Bigg( \\frac{1}{J_0} \\sum_{j \\in \\Gamma} \\frac{\\rho(j,t;\\theta)}{\\rho_\\theta^{eq}(j)} \\Bigg) \\Psi_{eq}(\\theta), \\hspace{0.3 cm} \\text{with} \\hspace{0.3 cm} J_0 := \\sum_{j' \\in \\Gamma} 1.\n",
-    "\\end{equation*}\n",
+    "\\end{equation}\n",
     "\n",
     "Finally, using the master equation and the definitions for the expected values it can be found that the dynamics that follow the conjugate thermodynamical quantities $\\theta_a$ y $\\langle \\mathcal{O}_a \\rangle$ and the function $\\Psi$ asociated to $\\rho(j,t;\\theta)$ is given by the following set of equations\n",
     "\n",
